fix(Radio, Checkbox, Switch): :bug: Remove z-index on selection control icon (#798)

--- a/packages/react/src/components/form/Switch/Switch.module.css
+++ b/packages/react/src/components/form/Switch/Switch.module.css
@@ -35,7 +35,6 @@
   pointer-events: none;
   height: 1.75em;
   width: auto;
-  z-index: 1;
   margin: auto;
   overflow: visible;
   border-radius: 16px;
